src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Receipt_of_Benefits__c</fullName>
        <label>Receipt of Benefits</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Prefer not to say</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Region</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Regular_Unavailable_Times_of_the_Week__c</fullName>
        <label>Regular Unavailable Times of the Week</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Religion__c</fullName>
        <label>Religion</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No religion</fullName>
                </value>
                <value>
                    <fullName>Christian including Church of England Catholic Protestant and all other Christian denominations</fullName>
                    <label>Christian (including Church of England, Catholic, Protestant and all other Christian denominations)</label>
                </value>
                <value>
                    <fullName>Buddhist</fullName>
                </value>
                <value>
                    <fullName>Hindu</fullName>
                </value>
                <value>
                    <fullName>Jewish</fullName>
                </value>
                <value>
                    <fullName>Muslim</fullName>
                </value>
                <value>
                    <fullName>Sikh</fullName>
                </value>
                <value>
                    <fullName>Any other religion</fullName>
                </value>
                <value>
                    <fullName>Prefer not to say</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Resilience_Concern__c</fullName>
        <label>Resilience Concern</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Resilience_Score__c</fullName>
        <inlineHelpText>Score should be out of 5</inlineHelpText>
        <label>Resilience Score (Deprecated)</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Resilience_and_Receiving_Feedback_Score__c</fullName>
        <inlineHelpText>Score should be out of 5</inlineHelpText>
        <label>Resilience and Receiving Feedback Score</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Revision_Booster_Form__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IS Revision Booster Form Returned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Right_To_Work_Checked_Document_1__c</fullName>
        <inlineHelpText>The name of a document checked for their right to work in the UK</inlineHelpText>
        <label>Right To Work: Checked Document 1</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Right_To_Work_Checked_Document_2__c</fullName>
        <inlineHelpText>The name of a document checked for their right to work in the UK</inlineHelpText>
        <label>Right To Work: Checked Document 2</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Right_To_Work_Checked_Document_3__c</fullName>
        <inlineHelpText>The name of a document checked for their right to work in the UK</inlineHelpText>
        <label>Right To Work: Checked Document 3</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Right_To_Work_Date_Checked__c</fullName>
        <label>Right To Work: Date Checked</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Right_To_Work_Staff_Member_Responsible__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Right To Work: Staff Member Responsible</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contacts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Right_to_work_in_UK__c</fullName>
        <description>Do you have the right to remain and work in the UK for the duration of the Get Further Programme?</description>
        <label>Right To Work in UK?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Secondary_Tutor_Subject__c</fullName>
        <description>The second subject the tutor is aligned to teach</description>
        <inlineHelpText>The second subject the tutor is aligned to teach</inlineHelpText>
        <label>Secondary Tutor Subject</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Maths</fullName>
                </value>
                <value>
                    <fullName>English</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Select_the_roles_that_apply_to_you__c</fullName>
        <label>Select The Roles That apply To You</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Group Principal</fullName>
                </value>
                <value>
                    <fullName>Principal</fullName>
                </value>
                <value>
                    <fullName>Deputy Principal</fullName>
                </value>
                <value>
                    <fullName>Curriculum Manager</fullName>
                </value>
                <value>
                    <fullName>Classroom Teacher</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sexual_Orientation__c</fullName>
        <label>Sexual Orientation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Heterosexual</fullName>
                    <label>Straight/ Heterosexual</label>
                </value>
                <value>
                    <fullName>Gay or Lesbian</fullName>
                </value>
                <value>
                    <fullName>Bisexual</fullName>
                </value>
                <value>
                    <fullName>Prefer to self-describe</fullName>
                </value>
                <value>
                    <fullName>Prefer not to say</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Share_details__c</fullName>
        <defaultValue>false</defaultValue>
        <description>I am happy for my details to be shared with the colleges for the purpose of facilitating tutoring sessions.</description>
        <label>Happy To Share Details With Colleges?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Skills__c</fullName>
        <description>What skills would make you an effective tutor? Please detail any evidence of these skills:</description>
        <label>Skills</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SpecialEduNeeds__c</fullName>
        <label>Special Educational Needs</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Prefer not to say</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status_Reason__c</fullName>
        <label>Status Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Withdrawn - New Job</fullName>
                </value>
                <value>
                    <fullName>Withdrawn - Moved</fullName>
                </value>
                <value>
                    <fullName>Ended contract</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Unresponsive</fullName>
                </value>
                <value>
                    <fullName>Deferred</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>StudentID__c</fullName>
        <label>Student ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>StudySupporterFirstName__c</fullName>
        <label>Study Supporter First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StudySupporterLastName__c</fullName>
        <label>Study Supporter Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StudySupporterMobile__c</fullName>
        <label>Study Supporter Mobile</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>StudySupporterRelationship__c</fullName>
        <inlineHelpText>Study Supporter relationship to you (e.g. mother, father, brother, sister, grandparent, friend etc)</inlineHelpText>
        <label>Study Supporter Relationship</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Studying_Postgraduate_During_Tuition__c</fullName>
        <label>Studying Postgraduate During Tuition?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subject_Knowledge_Concern__c</fullName>
        <label>Subject Knowledge Concern</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Subject_Knowledge_Score__c</fullName>
        <inlineHelpText>Score should be out of 5</inlineHelpText>
        <label>Subject Knowledge Score</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Suitability__c</fullName>
        <defaultValue>false</defaultValue>
        <description>I confirm that I know of no reason why I may be considered unsuitable to work with children and that I will notify Get Further immediately if this changes during my application process.</description>
        <inlineHelpText>Applicant confirmed they know of no reason why they may be considered unsuitable to work with children.</inlineHelpText>
        <label>Suitability Self-Confirmed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Total_AC_Score__c</fullName>
        <formula>Drive_and_Commitment_Score__c  +  Empathy_and_Respect_Score__c  +  Resilience_and_Receiving_Feedback_Score__c  +  Subject_Knowledge_Score__c  +  Professionalism_and_Reliability_Score__c  +  Comms_and_Building_Relationships_Score__c  +  Attentiveness_and_Adaptability_Score__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total AC Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Score__c</fullName>
        <formula>Drive_and_Commitment_Score__c + Empathy_and_Respect_Score__c + Adaptability_Score__c + Attentiveness_Score__c + Building_Relationships_Score__c + Communication_Score__c + Integrity_Score__c + Professionalism_and_Reliability_Score__c + Resilience_Score__c + Subject_Knowledge_Score__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total AC Score (Deprecated)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Training_Month__c</fullName>
        <label>Training Month</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>January</fullName>
                </value>
                <value>
                    <fullName>February</fullName>
                </value>
                <value>
                    <fullName>March</fullName>
                </value>
                <value>
                    <fullName>April</fullName>
                </value>
                <value>
                    <fullName>May</fullName>
                </value>
                <value>
                    <fullName>June</fullName>
                </value>
                <value>
                    <fullName>July</fullName>
                </value>
                <value>
                    <fullName>August</fullName>
                </value>
                <value>
                    <fullName>September</fullName>
                </value>
                <value>
                    <fullName>October</fullName>
                </value>
                <value>
                    <fullName>November</fullName>
                </value>
                <value>
                    <fullName>December</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Training_Region__c</fullName>
        <label>Training Region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tutor_AC_Date__c</fullName>
        <label>Tutor AC Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Tutor_Half_Term_SMS__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag set in process builder to be set when first setup of half term SMS messages</description>
        <label>Tutor Half Term SMS Deactivated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tutor_Training_Date__c</fullName>
        <label>Tutor Training Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Tutor_will_help__c</fullName>
        <description>Do you think having a tutor will help you to reach your next steps? Please indicate (x) in the relevant
option</description>
        <inlineHelpText>Does student think having a tutor will help them reach desired next steps</inlineHelpText>
        <label>Tutor will help?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Not sure</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TwilioSF__Last_Message_Status_Date__c</fullName>
        <label>Last Message Status Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TwilioSF__Last_Message_Status__c</fullName>
        <label>Last Message Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>delivered</fullName>
                </value>
                <value>
                    <fullName>undelivered</fullName>
                </value>
                <value>
                    <fullName>failed</fullName>
                </value>
                <value>
                    <fullName>blocked</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TwilioSF__Unformatted_Mobile__c</fullName>
        <formula>&quot;&quot;</formula>
        <label>DEPRECATED Unformatted Mobile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TwilioSF__Unformatted_Phone__c</fullName>
        <formula>&quot;&quot;</formula>
        <label>DEPRECATED Unformatted Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Volunteer</fullName>
                </value>
                <value>
                    <fullName>Graduate Tutor</fullName>
                </value>
                <value>
                    <fullName>Student</fullName>
                </value>
                <value>
                    <fullName>Study Supporter</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unavailable_Dates_for_Training__c</fullName>
        <label>Unavailable Dates for Training</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Visa_Status__c</fullName>
        <inlineHelpText>Visa status for right to work</inlineHelpText>
        <label>Visa Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Weekly_Maximum_Number_of_Hours_to_Tutor__c</fullName>
        <label>Weekly Maximum Number of Hours to Tutor</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Weekly_Minimum_Number_of_Hours_to_Tutor__c</fullName>
        <label>Weekly Minimum Number of Hours to Tutor</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>What_is_your_employment_status__c</fullName>
        <label>Employment Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Full-time employment</fullName>
                </value>
                <value>
                    <fullName>Part-time employment</fullName>
                </value>
                <value>
                    <fullName>Unemployed</fullName>
                </value>
                <value>
                    <fullName>Retired</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Where_did_you_hear_about_Get_Further_2__c</fullName>
        <label>Where Did You Hear About Get Further?</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Where_did_you_hear_about_us</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>npe01__AlternateEmail__c</fullName>
        <description>Alternate Email is an optional fourth email: Not personal, preferred, or work email.</description>
        <inlineHelpText>Alternate Email is an optional fourth email: Not personal, preferred, or work email.</inlineHelpText>
        <label>Alternate Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>npe01__HomeEmail__c</fullName>
        <description>See Preferred Email field.</description>
        <inlineHelpText>See Preferred Email field.</inlineHelpText>
        <label>Personal Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>npe01__Home_Address__c</fullName>
        <description>Formula: Uses primary address type field to determine Home Address from Mailing or Other address.</description>
        <formula>IF(
  ISPICKVAL(npe01__Primary_Address_Type__c,&quot;Home&quot;),
  IF(ISBLANK(MailingStreet), &quot;&quot;, MailingStreet &amp; &quot;, &quot;) &amp; 
  IF(ISBLANK(MailingCity), &quot;&quot;, MailingCity &amp; &quot;, &quot;)&amp; 
  IF(ISBLANK(MailingState), &quot;&quot;, MailingState &amp; &quot; &quot;)&amp; 
  IF(ISBLANK(MailingPostalCode), &quot;&quot;, MailingPostalCode) &amp; 
  IF(ISBLANK(MailingCountry), &quot;&quot;, &quot;, &quot; &amp;MailingCountry)
,
IF(ISPICKVAL(npe01__Secondary_Address_Type__c,&quot;Home&quot;),
  IF(ISBLANK(OtherStreet), &quot;&quot;, OtherStreet &amp; &quot;, &quot;) &amp; 
  IF(ISBLANK(OtherCity), &quot;&quot;, OtherCity &amp; &quot;, &quot;)&amp; 
  IF(ISBLANK(OtherState), &quot;&quot;, OtherState &amp; &quot; &quot;)&amp; 
  IF(ISBLANK(OtherPostalCode), &quot;&quot;, OtherPostalCode) &amp; 
  IF(ISBLANK(OtherCountry), &quot;&quot;, &quot;, &quot; &amp; OtherCountry)
  ,&quot;&quot;
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula: Uses primary address type field to determine Home Address from Mailing or Other address.</inlineHelpText>
        <label>Home Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npe01__Organization_Type__c</fullName>
        <description>Formula: In order of preference, the SYSTEM_AccountType field, the Account Type field, and &quot;Organization&quot;.</description>
        <formula>NULLVALUE(IF( Account.npe01__SYSTEM_AccountType__c==&quot;&quot;, TEXT(Account.Type),Account.npe01__SYSTEM_AccountType__c),&quot;Organization&quot; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula: In order of preference, the SYSTEM_AccountType field, the Account Type field, and &quot;Organization&quot;.</inlineHelpText>
        <label>Organization Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npe01__Other_Address__c</fullName>
        <description>Formula: If the Primary Address Type is Other, the Mailing Address.  If the Secondary Address Type is Other, the Other Address.</description>
        <formula>IF(
  ISPICKVAL(npe01__Primary_Address_Type__c,&quot;Other&quot;),
  IF(ISBLANK(MailingStreet), &quot;&quot;, MailingStreet &amp; &quot;, &quot;) &amp; 
  IF(ISBLANK(MailingCity), &quot;&quot;, MailingCity &amp; &quot;, &quot;)&amp; 
  IF(ISBLANK(MailingState), &quot;&quot;, MailingState &amp; &quot; &quot;)&amp; 
  IF(ISBLANK(MailingPostalCode), &quot;&quot;, MailingPostalCode) &amp; 
  IF(ISBLANK(MailingCountry), &quot;&quot;, &quot;, &quot; &amp;MailingCountry)
,
IF(ISPICKVAL(npe01__Secondary_Address_Type__c,&quot;Other&quot;),
  IF(ISBLANK(OtherStreet), &quot;&quot;, OtherStreet &amp; &quot;, &quot;) &amp; 
  IF(ISBLANK(OtherCity), &quot;&quot;, OtherCity &amp; &quot;, &quot;)&amp; 
  IF(ISBLANK(OtherState), &quot;&quot;, OtherState &amp; &quot; &quot;)&amp; 
  IF(ISBLANK(OtherPostalCode), &quot;&quot;, OtherPostalCode) &amp; 
  IF(ISBLANK(OtherCountry), &quot;&quot;, &quot;, &quot; &amp; OtherCountry)
  ,&quot;&quot;
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula: If the Primary Address Type is Other, the Mailing Address.  If the Secondary Address Type is Other, the Other Address.</inlineHelpText>
        <label>Other Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npe01__PreferredPhone__c</fullName>
        <description>Which phone number should be used for most communications involving this Contact?</description>
        <inlineHelpText>Which phone number should be used for most communications involving this Contact?</inlineHelpText>
        <label>Preferred Phone</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Home</fullName>
                    <default>true</default>
                    <label>Home</label>
                </value>
                <value>
                    <fullName>Work</fullName>
                </value>
                <value>
                    <fullName>Mobile</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>npe01__Preferred_Email__c</fullName>
        <description>Which email should be used for most communications involving this Contact?</description>
        <inlineHelpText>Which email should be used for most communications involving this Contact?</inlineHelpText>
        <label>Preferred Email</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Personal</fullName>
                    <default>true</default>
                    <label>Personal</label>
                </value>
                <value>
                    <fullName>Work</fullName>
                </value>
                <value>
                    <fullName>Alternate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>npe01__Primary_Address_Type__c</fullName>
        <description>Which type of address is the mailing address?</description>
        <inlineHelpText>Which type of address is the mailing address?</inlineHelpText>
        <label>Primary Address Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Home</fullName>
                </value>
                <value>
                    <fullName>Work</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>npe01__Private__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Excludes this Contact from any Individual Account processing. If you leave the Account field blank, it will remain blank.</description>
        <inlineHelpText>Excludes this Contact from One to One or Bucket account processing.</inlineHelpText>
        <label>Private</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>npe01__Secondary_Address_Type__c</fullName>
        <description>What type of address is the other address?</description>
        <inlineHelpText>What type of address is the other address?</inlineHelpText>
        <label>Secondary Address Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Home</fullName>
                </value>
                <value>
                    <fullName>Work</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>npe01__SystemAccountProcessor__c</fullName>
        <description>NO LONGER USED - Hidden system field: do not change.  Updated by automatic processes.  See Contacts &amp; Organization settings.</description>
        <inlineHelpText>Indicates which model drives Account relationship behavior: Individual (Bucket) or One-to-One</inlineHelpText>
        <label>DEPRECATED - _SYSTEM: ACCOUNT PROCESSOR</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>One-to-One</fullName>
                    <default>true</default>
                    <label>One-to-One</label>
                </value>
                <value>
                    <fullName>Individual</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>npe01__Type_of_Account__c</fullName>
        <description>Formula: &quot;Individual&quot; or &quot;Organization&quot; depending on Account setting.</description>
        <formula>IF(Account.npe01__SYSTEMIsIndividual__c,&quot;Individual&quot;,&quot;Organization&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula: &quot;Individual&quot; or &quot;Organization&quot; depending on Account setting.</inlineHelpText>
        <label>Type of Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npe01__WorkEmail__c</fullName>
        <description>See Preferred Email field.</description>
        <inlineHelpText>See Preferred Email field.</inlineHelpText>
        <label>Work Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>npe01__WorkPhone__c</fullName>
        <description>See &apos;Preferred Phone&apos; field.</description>
        <inlineHelpText>See &apos;Preferred Phone&apos; field.</inlineHelpText>
        <label>Work Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>npe01__Work_Address__c</fullName>
        <description>Formula: If the Primary Address Type is Work, the Mailing Address.  If the Secondary Address Type is Work, the Other Address.</description>
        <formula>IF(
  ISPICKVAL(npe01__Primary_Address_Type__c,&quot;Work&quot;),
  IF(ISBLANK(MailingStreet), &quot;&quot;, MailingStreet &amp; &quot;, &quot;) &amp; 
  IF(ISBLANK(MailingCity), &quot;&quot;, MailingCity &amp; &quot;, &quot;)&amp; 
  IF(ISBLANK(MailingState), &quot;&quot;, MailingState &amp; &quot; &quot;)&amp; 
  IF(ISBLANK(MailingPostalCode), &quot;&quot;, MailingPostalCode) &amp; 
  IF(ISBLANK(MailingCountry), &quot;&quot;, &quot;, &quot; &amp;MailingCountry)
,
IF(ISPICKVAL(npe01__Secondary_Address_Type__c,&quot;Work&quot;),
  IF(ISBLANK(OtherStreet), &quot;&quot;, OtherStreet &amp; &quot;, &quot;) &amp; 
  IF(ISBLANK(OtherCity), &quot;&quot;, OtherCity &amp; &quot;, &quot;)&amp; 
  IF(ISBLANK(OtherState), &quot;&quot;, OtherState &amp; &quot; &quot;)&amp; 
  IF(ISBLANK(OtherPostalCode), &quot;&quot;, OtherPostalCode) &amp; 
  IF(ISBLANK(OtherCountry), &quot;&quot;, &quot;, &quot; &amp; OtherCountry)
  ,&quot;&quot; 
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula: If the Primary Address Type is Work, the Mailing Address.  If the Secondary Address Type is Work, the Other Address.</inlineHelpText>
        <label>Work Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npo02__AverageAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>See excluded Opportunity Record types, excluded Opportunity types in Household setting for &apos;always roll up to primary&apos; (exclude non individual Accounts).  Do not update.  Updated by automatic process.</description>
        <label>Average Gift</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npo02__Best_Gift_Year_Total__c</fullName>
        <label>Best Gift Year Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npo02__Best_Gift_Year__c</fullName>
        <label>Best Gift Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npo02__FirstCloseDate__c</fullName>
        <description>Do not update, updated by automatic process.</description>
        <label>First Gift Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>npo02__Formula_HouseholdMailingAddress__c</fullName>
        <description>Formula: Clone of the Household Mailing address (also a Formula)</description>
        <formula>IF(npe01__Organization_Type__c == &apos;Household Account&apos;,

Account.BillingStreet &amp; BR() &amp;
Account.BillingCity &amp; IF(ISBLANK(Account.BillingCity), &quot;&quot;, &quot;, &quot;) &amp; Account.BillingState &amp; &quot; &quot; &amp; Account.BillingPostalCode 
&amp; IF(ISBLANK(Account.BillingCountry), &quot;&quot;, BR()&amp; Account.BillingCountry),

npo02__Household__r.npo02__Formula_MailingAddress__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Household Mailing Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npo02__Formula_HouseholdPhone__c</fullName>
        <description>Formula: Simple formula of Household Phone field.</description>
        <formula>IF(npe01__Organization_Type__c == &apos;Household Account&apos;, 
Account.npo02__HouseholdPhone__c,
npo02__Household__r.npo02__HouseholdPhone__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Household Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npo02__Household_Naming_Order__c</fullName>
        <label>Household Naming Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>npo02__Household__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Household</label>
        <referenceTo>npo02__Household__c</referenceTo>
        <relationshipLabel>Household Members</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>